src/test/resources/etapa3/failing/wrongParamTypeInMethod.ru
struct A {
    Int a;
}

impl A {
    .() {}
    fn method_1 (C c) -> void {}
    st fn method_2(Int wala, Str jeje) -> Int {
        ret 1;
    }
}

start {}